--- a/src/Components/styles.module.css
+++ b/src/Components/styles.module.css
@@ -65,6 +65,10 @@
     text-transform: none;
 }
 
+.container .btn:hover{
+    background-color: var(--very-dark-blue);
+}
+
 @media (max-width : 600px) {
 
     .container {
